# nuts

./: .gitignore  Cargo.toml  Changelog  Changelog.md  LICENSE  README.md  build.rs
backends/directory/: Cargo.toml
backends/directory/src/: error.rs  id.rs  info.rs  lib.rs  options.rs  plugin.rs
backends/directory/src/id/: tests.rs
derive/: Cargo.toml
nuts/: Cargo.toml  build.rs
nuts-archive/: Cargo.toml  Changelog.md  LICENSE  README.md
nuts-archive/data/: 0.6.8-aes128ctr.json  0.6.8-aes128gcm.json  0.6.8-none.json  0.7.0-aes128ctr.json  0.7.0-aes128gcm.json  0.7.0-aes192ctr.json  0.7.0-aes192gcm.json  0.7.0-aes256ctr.json  0.7.0-aes256gcm.json  0.7.0-none.json  0.7.1-aes128ctr.json  0.7.1-aes128gcm.json  0.7.1-aes192ctr.json  0.7.1-aes192gcm.json  0.7.1-aes256ctr.json  0.7.1-aes256gcm.json  0.7.1-none.json  0.7.3-aes128ctr.json  0.7.3-aes128gcm.json  0.7.3-aes192ctr.json  0.7.3-aes192gcm.json  0.7.3-aes256ctr.json  0.7.3-aes256gcm.json  0.7.3-none.json
nuts-archive/src/: builder.rs  datetime.rs  entry.rs  error.rs  header.rs  id.rs  iter.rs  lib.rs  magic.rs  migration.rs  mode.rs  pager.rs  rc.rs  tests.rs  tree.rs  userdata.rs
nuts-archive/src/entry/: immut.rs  mut.rs  tstamp.rs
nuts-archive/src/entry/immut/: tests.rs
nuts-archive/src/entry/mut/: tests.rs
nuts-archive/src/header/: tests.rs
nuts-archive/src/mode/: tests.rs
nuts-archive/src/pager/: tests.rs
nuts-archive/src/tree/: cache.rs  node.rs  tests.rs
nuts-archive/src/tree/cache/: tests.rs
nuts-archive/src/tree/node/: tests.rs
nuts-archive/src/tree/tests/: acquire.rs  aquire.rs  lookup.rs
nuts-archive/src/userdata/: tests.rs
nuts-archive/tests/: archive.rs  compat.rs  lookup.rs
nuts-backend/: Cargo.toml
nuts-backend/src/: lib.rs  plugin.rs
nuts-backend/src/plugin/: error.rs  id.rs  info.rs  loader.rs  options.rs  settings.rs
nuts-container/: Cargo.toml  README.md
nuts-container/data/: 0.6.8-aes128gcm.json  0.6.8-none.json  0.7.0-aes128ctr.json  0.7.0-aes128gcm.json  0.7.0-aes192gcm.json  0.7.0-none.json  0.7.1-aes128ctr.json  0.7.1-aes192ctr.json  0.7.1-aes192gcm.json  0.7.1-none.json  0.7.3-aes192gcm.json  0.7.3-aes256gcm.json  0.7.3-none.json
nuts-container/data/compat/: 0.6.8-aes128ctr.json  0.7.0-aes192ctr.json  0.7.0-aes256ctr.json  0.7.0-aes256gcm.json  0.7.1-aes128gcm.json  0.7.1-aes256ctr.json  0.7.1-aes256gcm.json  0.7.3-aes128ctr.json  0.7.3-aes128gcm.json  0.7.3-aes192ctr.json  0.7.3-aes256ctr.json
nuts-container/data/service/: 0.6.8.json  0.7.0.json  0.7.1.json  0.7.3.json
nuts-container/src/: buffer.rs  cipher.rs  container.rs  digest.rs  error.rs  header.rs  info.rs  kdf.rs  lib.rs  memory.rs  migrate.rs  options.rs  ossl.rs  password.rs  service.rs  svec.rs  tests.rs
nuts-container/src/buffer/: tests.rs
nuts-container/src/buffer/tests/: immut.rs  mut_slice.rs  mut_vec.rs
nuts-container/src/cipher/: tests.rs
nuts-container/src/cipher/tests/: aes128_ctr.rs  aes128_gcm.rs  aes192_ctr.rs  aes192_gcm.rs  aes256_ctr.rs  aes256_gcm.rs  bytes.rs  none.rs  string.rs
nuts-container/src/container/: digest.rs  error.rs  header.rs  info.rs  options.rs  password.rs  svec.rs  tests.rs
nuts-container/src/container/header/: inner.rs  rev0.rs
nuts-container/src/container/tests/: info.rs  read.rs  write.rs
nuts-container/src/digest/tests/: bytes.rs  digest.rs
nuts-container/src/header/: inner.rs  plain_secret.rs  rev0.rs  revision.rs  secret.rs  tests.rs
nuts-container/src/header/inner/: tests.rs
nuts-container/src/header/plain_secret/: tests.rs
nuts-container/src/header/rev0/: tests.rs
nuts-container/src/header/revision/: tests.rs
nuts-container/src/header/secret/: tests.rs
nuts-container/src/kdf/: tests.rs
nuts-container/src/kdf/tests/: bytes.rs  none.rs  pbkdf2.rs  string.rs
nuts-container/src/migrate/: tests.rs
nuts-container/src/password/: tests.rs
nuts-container/src/tests/: info.rs  read.rs  write.rs
nuts-container/tests/: compat.rs  container.rs  create_service.rs  modify.rs  open_service.rs
nuts-container/tests/common/: mod.rs
nuts-directory/: Cargo.toml  README.md
nuts-directory/src/: id.rs  info.rs  lib.rs  main.rs  options.rs
nuts-directory/src/id/: tests.rs
nuts-memory/: Cargo.toml
nuts-memory/src/: lib.rs  tests.rs
nuts-tool/: Cargo.toml  README.md
nuts-tool-api/: Cargo.toml
nuts-tool-api/src/: bson.rs  info.rs  lib.rs  msg.rs  plugin.rs  tool.rs
nuts-tool-api/src/info/: tests.rs
nuts-tool-api/src/plugin/: cli.rs  handler.rs  runner.rs
nuts-tool-api/src/tool/: connection.rs  plugin.rs
nuts-tool/src/: archive.rs  backend.rs  cli.rs  config.rs  format.rs  lib.rs  main.rs  plugin.rs  say.rs
nuts-tool/src/cli/: archive.rs  container.rs  ctx.rs  error.rs  global.rs  password.rs  plugin.rs
nuts-tool/src/cli/archive/: add.rs  create.rs  get.rs  info.rs  list.rs  migrate.rs
nuts-tool/src/cli/container/: acquire.rs  aquire.rs  attach.rs  change.rs  create.rs  delete.rs  info.rs  list.rs  read.rs  release.rs  write.rs
nuts-tool/src/cli/plugin/: add.rs  info.rs  list.rs  modify.rs  remove.rs
nuts-tool/src/config/: container.rs  plugin.rs
nuts-tool/tests/: archive.rs  container.rs  plugin.rs
nuts-tool/tests/common/: mod.rs
nuts-tool/tests/predicates_ext/: mod.rs
nuts/src/: backend.rs  binary.rs  bytes.rs  container.rs  error.rs  header.rs  io.rs  lib.rs  macros.rs  memory.rs  openssl.rs  rand.rs  secret.rs  stream.rs  svec.rs  types.rs  utils.rs  wkey.rs
nuts/src/bytes/: error.rs  options.rs  reader.rs  tests.rs  writer.rs
nuts/src/bytes/tests/: to_bytes.rs
nuts/src/bytes/writer/: tests.rs
nuts/src/container/: cipher.rs  digest.rs  error.rs  header.rs  info.rs  inner.rs  kdf.rs  options.rs  password.rs
nuts/src/container/cipher/: tests.rs
nuts/src/directory/: id.rs  info.rs  options.rs
nuts/src/header/: ser.rs  tests.rs
nuts/src/io/: tests.rs
nuts/src/openssl/: error.rs  evp.rs  rand.rs  tests.rs
nuts/src/password/: tests.rs
nuts/src/stream/: block.rs  error.rs  inner.rs  read.rs  tests.rs  testutils.rs  write.rs
nuts/src/types/: tests.rs
nuts/src/wkey/: tests.rs
(+411 files in other folders)
