[package]
name = "nuts-tool"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "3.2.23", features = ["color", "derive", "env"] }
env_logger = "0.9.3"
home = "0.5.5"
log = "0.4.20"
nuts-container = "0.1.1"
nuts-directory = "0.1.1"
rpassword = "7.2.0"

[[bin]]
name = "nuts"
path = "src/main.rs"
