[package]
name = "nuts-directory"
version = "0.1.1"
edition = "2018"
authors = ["Robin Doer <robin@robind.de>"]
description = "A backend implementation for nuts"
categories = ["cryptography"]
keywords = ["secure", "storage"]
repository = "https://github.com/drobin/nuts-directory.git"
documentation = "https://docs.rs/nuts-directory"
license = "MIT"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = "0.2.10"
log = "0.4.20"
nuts-container = { version = "0.2.0", default-features = false, features = ["backend"] }
nuts-bytes = "0.1.1"
serde = { version = "1.0.188", features = ["derive"] }
