[package]
name = "nuts-tool"
version = "0.3.1"
edition = "2018"
authors = ["Robin Doer <robin@robind.de>"]
description = "A cmdline utility for the nuts container"
categories = ["cryptography", "command-line-utilities"]
keywords = ["secure", "storage", "nuts"]
repository = "https://github.com/drobin/nuts-tool.git"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "3.2.23", features = ["color", "derive", "env"] }
colored = "2.0.4"
env_logger = "0.9.3"
home = "0.5.5"
log = "0.4.20"
nuts-archive = "0.1.1"
nuts-container = "0.2.1"
nuts-directory = "0.3.0"
rpassword = "7.2.0"

[build-dependencies]
cargo_metadata = "0.18.1"

[[bin]]
name = "nuts"
path = "src/main.rs"
