[package]
name = "nuts-archive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
log = "0.4.14"
nuts = { path = "../nuts" }
nuts-backend = { path = "../nuts-backend" }
nuts-bytes = "0.1.0"
serde = { version = "1.0.152", features = ["derive"] }
