[package]
name = "nuts-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.7.4"
log = "0.4.14"
nuts-bytes = { path = "../nuts-bytes" }
serde = { version = "1.0.152", features = ["derive"] }
