# MIT License
#
# Copyright (c) 2023 Robin Doer
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to
# deal in the Software without restriction, including without limitation the
# rights to use, copy, modify, merge, publish, distribute, sublicense, and/or
# sell copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in
# all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
# FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS
# IN THE SOFTWARE.

[package]
name = "nuts-container"
version = "0.2.2"
edition = "2018"
authors = ["Robin Doer <robin@robind.de>"]
description = "A secure storage library"
categories = ["cryptography"]
keywords = ["secure", "storage", "nuts"]
repository = "https://github.com/drobin/nuts-container.git"
documentation = "https://docs.rs/nuts-container"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["backend", "container"]
backend = ["dep:nuts-bytes"]
container = ["backend", "dep:nuts-bytes", "dep:openssl", "dep:openssl-sys"]
debug-plain-keys = []

[dependencies]
log = "0.4.20"
nuts-bytes = { version = "0.2.2", features = ["derive"], optional = true }
openssl = { version = "0.10.57", optional = true }
openssl-sys = { version = "0.9.93", optional = true }
thiserror = "1.0.50"
