# MIT License
#
# Copyright (c) 2023,2024 Robin Doer
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to
# deal in the Software without restriction, including without limitation the
# rights to use, copy, modify, merge, publish, distribute, sublicense, and/or
# sell copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in
# all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
# FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS
# IN THE SOFTWARE.

[package]
name = "nuts-container"
version = "0.7.2"
edition = "2018"
authors = ["Robin Doer <robin@robind.de>"]
description = "A secure storage library"
categories = ["cryptography"]
keywords = ["secure", "storage", "nuts"]
repository = "https://github.com/drobin/nuts.git"
documentation = "https://docs.rs/nuts-container"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
debug-plain-keys = []

[dependencies]
log = "0.4.21"
nuts-backend = { path = "../nuts-backend", version = "=0.7.2" }
openssl = { version = "0.10.66", features = ["vendored"] }
thiserror = "1.0.61"

[dev-dependencies]
nuts-memory = { path = "../nuts-memory", version = "=0.7.2" }
serde_json = { version = "1.0.128", features = ["std"] }
