[package]
name = "nuts-directory"
version = "0.4.0"
edition = "2018"
authors = ["Robin Doer <robin@robind.de>"]
description = "A backend implementation for nuts"
categories = ["cryptography"]
keywords = ["secure", "storage", "nuts"]
repository = "https://github.com/drobin/nuts.git"
documentation = "https://docs.rs/nuts-directory"
license = "MIT"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = "=0.2.10"
log = "=0.4.20"
nuts-backend = { path = "../nuts-backend", version = "=0.4.0" }
nuts-bytes = { path = "../nuts-bytes", version = "=0.4.0", features = [
    "derive",
] }
