[package]
name = "nuts-directory"
version = "0.6.0"
edition = "2018"
authors = ["Robin Doer <robin@robind.de>"]
description = "A backend implementation for nuts"
categories = ["cryptography"]
keywords = ["secure", "storage", "nuts"]
repository = "https://github.com/drobin/nuts.git"
documentation = "https://docs.rs/nuts-directory"
license = "MIT"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = "=0.2.12"
log = "=0.4.20"
nuts-backend = { path = "../nuts-backend", version = "=0.6.0" }
nuts-tool-api = { path = "../nuts-tool-api", version = "=0.6.0", optional = true }

[features]
plugin = ["dep:nuts-tool-api"]

[[bin]]
name = "nuts-directory"
required-features = ["plugin"]
