# MIT License
#
# Copyright (c) 2024 Robin Doer
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to
# deal in the Software without restriction, including without limitation the
# rights to use, copy, modify, merge, publish, distribute, sublicense, and/or
# sell copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in
# all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
# FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS
# IN THE SOFTWARE.

[package]
name = "nuts-memory"
version = "0.7.3"
edition = "2018"
authors = ["Robin Doer <robin@robind.de>"]
description = "A backend implementation for nuts"
categories = ["cryptography"]
keywords = ["secure", "storage", "nuts"]
repository = "https://github.com/drobin/nuts.git"
documentation = "https://docs.rs/nuts-memory"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nuts-backend = { path = "../nuts-backend", version = "=0.7.3" }
nuts-bytes = { path = "../nuts-bytes", version = "=0.7.3", features = [
    "derive",
] }
serde = { version = "1.0.202", features = ["derive"] }
thiserror = "1.0.61"
