[package]
name = "nuts-tool-api"
version = "0.6.1"
edition = "2018"
authors = ["Robin Doer <robin@robind.de>"]
description = "Code that helps you to implement a nuts tool plugin"
categories = ["cryptography", "command-line-utilities"]
keywords = ["secure", "storage", "nuts"]
repository = "https://github.com/drobin/nuts.git"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
bson = "2.9.0"
bytes = "1"
home = "=0.5.9"
log = "=0.4.20"

clap = { version = "~4.4.18", features = ["cargo", "derive"], optional = true }
env_logger = { version = "=0.10.1", optional = true }
nuts-backend = { path = "../nuts-backend", version = "=0.6.1", optional = true }
thiserror = "=1.0.56"

[features]
default = ["plugin"]
plugin = ["dep:clap", "dep:env_logger", "dep:nuts-backend"]
tool = ["dep:nuts-backend"]
