# MIT License
#
# Copyright (c) 2024 Robin Doer
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to
# deal in the Software without restriction, including without limitation the
# rights to use, copy, modify, merge, publish, distribute, sublicense, and/or
# sell copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in
# all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
# FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS
# IN THE SOFTWARE.

[package]
name = "nuts-tool-api"
version = "0.7.7"
edition = "2018"
rust-version = "1.81"
authors = ["Robin Doer"]
description = "Code that helps you to implement a nuts tool plugin"
categories = ["cryptography", "command-line-utilities"]
keywords = ["secure", "storage", "nuts"]
repository = "https://github.com/drobin/nuts.git"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.216", features = ["derive"] }
bson = "2.13.0"
bytes = "1.9.0"
home = "0.5.11"
log = "0.4.22"

clap = { version = "4.5.23", features = ["cargo", "derive"], optional = true }
env_logger = { version = "0.11.5", optional = true }
nuts-backend = { path = "../nuts-backend", version = "=0.7.7", optional = true }
thiserror = "2.0.8"

[features]
default = ["debug-condensed", "plugin"]
plugin = ["dep:clap", "dep:env_logger", "dep:nuts-backend"]
tool = ["dep:nuts-backend"]

# Debug/trace messages are logged without bytes arrays. Instead, number of
# bytes is logged. This makes the log messages shorter.
debug-condensed = []
