[package]
name = "nuts-tool"
version = "0.5.0"
edition = "2018"
rust-version = "1.66"
authors = ["Robin Doer <robin@robind.de>"]
description = "A cmdline utility for the nuts container"
categories = ["cryptography", "command-line-utilities"]
keywords = ["secure", "storage", "nuts"]
repository = "https://github.com/drobin/nuts.git"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "=1.0.79"
chrono = "=0.4.31"
clap = { version = "~4.4.18", features = ["cargo", "color", "derive", "env"] }
colored = "=2.1.0"
env_logger = "=0.10.1"
home = "=0.5.9"
log = "=0.4.20"
nuts-archive = { path = "../nuts-archive", version = "=0.5.0" }
nuts-container = { path = "../nuts-container", version = "=0.5.0" }
nuts-directory = { path = "../nuts-directory", version = "=0.5.0" }
nuts-tool-api = { path = "../nuts-tool-api", version = "=0.1.0", default-features = false, features = [
    "tool",
] }
rpassword = "=7.3.1"
serde = { version = "1", features = ["derive"] }
toml = "=0.8.11"
is_executable = "=1.0.1"

[[bin]]
name = "nuts"
path = "src/main.rs"
