# MIT License
#
# Copyright (c) 2023-2025 Robin Doer
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to
# deal in the Software without restriction, including without limitation the
# rights to use, copy, modify, merge, publish, distribute, sublicense, and/or
# sell copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in
# all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
# FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS
# IN THE SOFTWARE.

[package]
name = "nuts-tool"
version = "0.7.8"
edition = "2018"
rust-version = "1.66"
authors = ["Robin Doer <robin@robind.de>"]
description = "A cmdline utility for the nuts container"
categories = ["cryptography", "command-line-utilities"]
keywords = ["secure", "storage", "nuts"]
repository = "https://github.com/drobin/nuts.git"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["cargo", "color", "derive", "env"] }
colored = "2.1.0"
env_logger = "0.10.2"
lazy_static = "1.4.0"
log = "0.4.21"
nuts-archive = { path = "../nuts-archive", version = "=0.7.8" }
nuts-backend = { path = "../nuts-backend", version = "=0.7.8" }
nuts-container = { path = "../nuts-container", version = "=0.7.8" }
nuts-tool-api = { path = "../nuts-tool-api", version = "=0.7.8", default-features = false, features = [
    "tool",
] }
rpassword = "7.3.1"
rprompt = "2.1.1"
serde = { version = "1.0.202", features = ["derive"] }
thiserror = "1.0.61"
toml = "0.8.13"
is_executable = "1.0.1"

[dev-dependencies]
assert_cmd = "2.0.16"
assert_fs = "1.1.2"
hex = "0.4.3"
predicates = "3.1.2"

[[bin]]
name = "nuts"
path = "src/main.rs"
