[package]
name = "nuts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug-plain-keys = []

[dependencies]
log = "0.4.14"
nuts-backend = { path = "../nuts-backend" }
nuts-bytes = { path = "../nuts-bytes" }
openssl-sys = "0.9.80"
serde = { version = "1.0.152", features = ["derive"] }

[dev-dependencies]
nutsbackend-directory = { path = "../backends/directory" }
testx = "0.1.2"
