[package]
name = "nutsbackend-directory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
nuts-backend = { path = "../../nuts-backend" }
nuts-bytes = { path = "../../nuts-bytes" }
uuid = { version = "1.1.2", features = ["v4"] }
